Update author to Everlee Labs and improve README
- Change author from Local Community to Everlee Labs
- Add comprehensive README with installation, usage, and development instructions
- Remove unused TestPanel.jsx file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wp-debug-toggler",
   "productName": "WP Debug Toggler",
   "version": "1.0.0",
-  "author": "Local Community",
+  "author": "Everlee Labs",
   "keywords": [
     "local-addon"
   ],
