Update button and toggle styles to match Local design
- Changed toggle colors: off (light grey), on (#267048)
- Updated all buttons: transparent bg, #267048 border/text, 2px border, 50px border-radius, font-weight 700
- Button hover: #51bb7b bg with white text, border removed
- Inlined toggle and button rendering to fix styling issues when installed from disk
- Removed excessive console logging

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "main": "lib/main.js",
   "scripts": {
     "build": "npx tsc src/main.ts --outDir lib --module commonjs --target es2015 --esModuleInterop && webpack --config webpack.config.js",
-    "watch": "npx tsc src/main.ts --outDir lib --module commonjs --target es2015 --esModuleInterop --watch & webpack --config webpack.config.js --watch"
+    "watch": "npx tsc src/main.ts --outDir lib --module commonjs --target es2015 --esModuleInterop --watch & webpack --config webpack.config.js --watch",
+    "package": "./package-addon.sh"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
